<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_splash_screen"
    tools:context=".ui.mymusic.MyMusicFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabTextColor="@color/color_black">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_favorites" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_dowload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_download" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tracks" />
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tablayout" />
</android.support.constraint.ConstraintLayout>
